[package]
name = "hls-transcoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hls-transcoder"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2", "tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bytes = "1"
anyhow = "1"
url = "2"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
